# hplp

./: README.txt  calc_prime.c  hidtest.cpp  hpcables.c  hpcables.h  hpcalcs.c  hpcalcs.h  hpcomm.h  install_hplp.sh  link_prime_hid.c  link_prime_hid.h  logging.c  logging.h  prime_cmd.c  prime_cmd.h  prime_rpkt.c  prime_vpkt.c  recompile_cross_hplp.sh  recompile_hplp.sh  run_autoreconf.sh  run_updatepot.sh
libhpcalcs/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  hpcalcs.pc.in
libhpcalcs/po/: Makevars  POTFILES  POTFILES.in  fr.po  libhpcalcs.pot
libhpcalcs/src/: Makefile.am  calc_none.c  calc_prime.c  error.c  error.h  export.h  filetypes.c  filetypes.h  gettext.h  hpcables.c  hpcables.h  hpcalcs.c  hpcalcs.h  hpfiles.c  hpfiles.h  hplibs.h  hpopers.c  hpopers.h  internal.h  link_39gII_hid.c  link_nul.c  link_prime_emu.c  link_prime_hid.c  logging.c  logging.h  prime_cmd.c  prime_cmd.h  prime_rpkt.c  prime_vpkt.c  type2str.c  typesprime.c  typesprime.h  utils.c  utils.h
libhpcalcs/tests/: Makefile.am  test_hpcalcs.c  torture_hpcalcs.c
